--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "devDependencies": {
     "eslint": "^8.17.0",
     "eslint-plugin-html": "^6.2.0",
-    "http-server": "^14.1.0"
+    "http-server": "^14.1.0",
+    "stylelint": "^14.8.5",
+    "stylelint-config-standard": "^25.0.0"
   },
   "scripts": {
-    "lint": "eslint --ext=.html,.js .",
+    "lint": "yarn run lint:js && yarn run lint:css",
+    "lint:js": "eslint --ext=.html,.js .",
+    "lint:css": "stylelint 'public/**/*.css'",
     "start": "yarn http-server -o --port 4040"
   }
 }
