ci: Set up auto-deployment via Netlify

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "stylelint-config-standard": "^25.0.0"
   },
   "scripts": {
+    "build": "echo 'No build step needed for this project'",
     "lint": "yarn run lint:html && yarn run lint:js && yarn run lint:css",
     "lint:css": "stylelint 'public/**/*.css'",
     "lint:css:fix": "stylelint --fix 'public/**/*.css'",
